--- a/src/markdown/english/9. Understandings.md
+++ b/src/markdown/english/9. Understandings.md
@@ -2,7 +2,7 @@ Before you can fully understand what it means to choose, you have to know how to
 
 **You are worthy of freedom.**
 
-Freedom is not avoidance of what you don't like. Freedom is instead, having clarity - and you are worthy of having this freedom. In fact, nobody isn't worthy of this. We have been brought up, by family, or influences, to believe we are not worthy of freedom. That we do not deserve it. However, if you do not deserve it, who does? The reality is, 
+Freedom is not avoidance of what you don't like. Freedom is instead, having clarity - and you are worthy of having this freedom. In fact, nobody isn't worthy of this. We have been brought up, by family, or influences, to believe we are not worthy of freedom. That we do not deserve it. However, if you do not deserve it, who does? The reality is, nobody doesn't deserve freedom.
 
 ## Night Emissions
 
