updated pdf name

--- a/src/markdown/english/6. Neurology.md
+++ b/src/markdown/english/6. Neurology.md
@@ -21,7 +21,7 @@ These things are the building blocks of the mind: What society, what people, bas
 
 A human will normally crave, and chase for their entire life. They will build an image of perfection, of a possible utopia, where everything would be fine. All they need is to get what they have wanted. However, everything you have ever desired is right here, in the present moment. Peace is not in the future. However, chasing pleasure, and craving these things, distracts one from peace.
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;" title="Source: Heroin Hive (book)"><img alt="Void" src="https://burgeonbook.org/md_images/void.png" height="230px"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;" title="Source: Heroin Hive (book)"><img alt="Void" src="https://burgeonbook.org/md_images/void.png" style="max-width:100%; max-height:230px"></div>
 
 Craving avoids one from asking important questions. It consumes time, and it fills the mind. Yet, the reality is that if these people who crave stopped craving, they would have to face the fact that they have nothing else of substance in their life. Due to this chasing, they have made no meaningful action. And any meaningful action they may have made has been forgotten and lost to time.
 
