--- a/src/markdown/english/7. Environment.md
+++ b/src/markdown/english/7. Environment.md
@@ -56,4 +56,4 @@ Through all of these environmental factors, be a beacon of light for those that 
 
 Nootropics (potent supplements) have a large potential for speeding up the dopaminergic recovery from porn use, and other addictive activities. While they should not be depended on, and are not necessary, for those that want to utilize them, they can be effective. With time, the research on nootropics will change, and more effective solutions will come out.
 
-For continually updated info on nootropics, visit <a href="burgeonbook.org/nootropics">burgeonbook.org/nootropics</a>
+For continually updated info on nootropics, visit <a href="https://burgeonbook.org/nootropics">burgeonbook.org/nootropics</a>
