--- a/src/markdown/english/10. Movement.md
+++ b/src/markdown/english/10. Movement.md
@@ -1,4 +1,4 @@
-Something I wanted to write about; if you fail to transmute your sexual energy builds up, you will almost be forced to phyiscally release, otherwise it could actually be unproductive. The key with this is to understand that you have not failed anything. The delusion that you can be without beating your meat or having sex ever again is delusional. The point of everything here is for someone who wants to be productive and who wants clarity - so if too much sexual energy builds up to where it is unproductive, it is alright to masturbate without porn. After this however, your energy levels will be lower. So take an overview of your different methods of transmutation and see if you are doing enough. Transmutation is a constant process - and it is much more valuable than you think.
+Something I wanted to write about; if you fail to transmute, your sexual energy builds up and you will almost be forced to phyiscally release, otherwise it could actually be unproductive. The key with this is to understand that you have not failed anything. The delusion that you can be without beating your meat or having sex ever again is delusional. The point of everything here is for someone who wants to be productive and who wants clarity - so if too much sexual energy builds up to where it is unproductive, it is alright to masturbate without porn. After this however, your energy levels will be lower. So take an overview of your different methods of transmutation and see if you are doing enough. Transmutation is a constant process - and it is much more valuable than you think.
 
 ## The Individuality of Truth
 
