--- a/src/markdown/english/5. Love.md
+++ b/src/markdown/english/5. Love.md
@@ -52,7 +52,7 @@ It is okay to feel the pain of a partner leaving - but porn is no light in the d
 
 If you desire sexual release, MO (not PMO) is an option, but as said before, transmuting kept energy has more of a benefit, and you don't want to be wasting your energy so freely.
 
-"Memories of love never pass. They linger, guide, and influence long after the source of stimulation has faded. There is nothing new in this. Every person, who has been moved by GENUINE LOVE, knows that it leaves enduring traces upon the human heart. The effect of love endures because love is spiritual in nature. The man who cannot be stimulated to great heights of achievement by love is hopeless - he is dead, though he may seem to live."
+"Memories of love never pass. They linger, guide, and influence long after the source of stimulation has faded. There is nothing new in this. Every person, who has been moved by **genuine love**, knows that it leaves enduring traces upon the human heart. The effect of love endures because love is spiritual in nature. The man who cannot be stimulated to great heights of achievement by love is hopeless - he is dead, though he may seem to live."
 
 If you believe yourself unfortunate because you have "loved and lost," perish the thought. One who has loved truly can never lose entirely. Love is temperamental and transitory. It comes when it pleases and goes away without warning. Accept and enjoy it while it remains, but spend no time worrying about its departure. Worry will never bring it back.
 
