--- a/src/markdown/arabic/1. Introduction.md
+++ b/src/markdown/arabic/1. Introduction.md
@@ -1,61 +1,60 @@
-أعظم قدراتك الخارقة هي القدرة على تغيير نفسك.
+أعظم قواك الخارقة هي قدرتك على تغيير نفسك.
 
-هذا الكتاب ليس لمن لن يأخذه بجدية. هذا الكتاب مخصص لأولئك الذين يريدون حقًا النمو ، والعثور على السلام ، والعثور على التحرر من الاباحية. من كان مهتماً لقرأة بعض النصائح او قائمة من المبادئ لأقلاع الاباحية, فلن يجدوه في هنا. ولكن سيقوم هذا الكتاب بأعطائك بفهم يمكنك استخدامه لاتخاذ قراراتك الخاصة. بنفسك.
+هذا الكتاب ليس لمن لن يأخذه بجدية. هذا الكتاب مخصص لمن أراد حقًا النمو ، والعثور على السلام ، والعثور على التحرر من الاباحية. من كان مهتماً لقرأة بعض النصائح الفارغة او قائمة من الخطوات لأقلاع الاباحية، فأنت في المكان الخاطئ. ولكن، سيقوم هذا الكتاب بمنحك فهماً يمكنك استخدامه لإتخاذ القرارات... بنفسك.
 
-يظن الكثير من الناس ان كل ما يتوجب عليهم فعله للأقلاع عن الاباحية... هو التوقف عن مشاهدتها. يقولون "كف عن مشاهدتها. لا تقم بفتح الصفحة. لا تشاهد الإباحية. أشغل نفسك بشيئ اخر.". لكن ضع في اعتبارك هذا: هل سبق و اتخذت الخيار "الإيجابي" انه يجب عليك مشاهدة الأباحية للاستنماء؟ أو أنك تحتاج إلى تخيلات اللي تسببها الإباحية لتضيف الأثراة في الجنس مع زوجك؟ او, ان في بعض الأحيان في حياتك لم تستطع الأستمتاع بالنوم، او حتى ان تكمل يوماً شاقاً و مرهقاً بدون التصفح للعثور على الإباحية؟ او انك لن تستطيع التركيز او تحمل الضغوط بدونها؟ في أي مرحلة قمت بتحديد انك تحتاج الإباحية، وأنك تحتاجها بشكل دائم في حياتك، بحيث تشعر بالقلق و عدم الثقة في غيابها؟ الحقيقة هي اننا لم نفكر في كل هذه الاشياء عندما وجدنا الإباحية.
+يظن الكثير من الناس ان كل ما يتوجب عليهم فعله للأقلاع عن الاباحية... هو التوقف عن مشاهدتها. يقولون "كف عن مشاهدتها. لا تفتح الصفحة. لا تشاهد الإباحية. أشغل نفسك بشيء اخر.". لكن فكر في هذا السؤال: هل سبق واخترت اختياراً واعياً انه يجب عليك مشاهدة الأباحية للاستنماء؟ أو أنك تحتاج إلى التخيلات التي تسببها الإباحية لتضيف الأثارة في الجنس مع زوجك؟ او أن في بعض الأحيان في حياتك لم تستطع الإستمتاع بالنوم، او ان تكمل يوماً شاقاً ومرهقاً بدون التصفح في المواقع الإباحية؟ او انك لن تستطيع التركيز او تَحمُّل الضغوط بدونها؟ في أي مرحلة بالظبط قمت بتحديد انك تــحــتــاج الإباحية، وأنك تحتاجها بشكل دائــــم في حياتك، بحيث تشعر بالقلق وعدم الثقة في غيابها؟ الحقيقة هي اننا لم نفكر في كل هذه الاشياء عندما وجدنا الإباحية.
 
-تخلص من فكرة "الطرق" و "الأرشادات" و "الكيفيات" في الأقلاع. لو كان النجاح الزاماً، لكان الجميع ناجحين. يوجد الكثير من الناس الذين يتصفحون عبر محتويات الأقلاع عن الإباحية بهوس شديد في أمل ان ينجحوا في الأقلاع. اذا اصبحت رغبتك منفردة، اي أنك مهتم بشكل غير طبيعي للوصول الى هدفك مهما كانت التكلفة، فأنك في نفس الوقت - في مكان ما في أعماقك - لن تكون مؤمناً بأنك قادر على انجاز هذا الشيئ.   
+تخلص من فكرة "الطرق" و "الأرشادات" و "الكيفيات" في الأقلاع. لو كان النجاح الزامياً، لكان الجميع ناجحين. يوجد الكثير من الناس الذين يتصفحون عبر محتويات الأقلاع عن الإباحية بهوس شديد في أمل ان ينجحوا في الأقلاع. إذا أصبحت رغبتك في شيء ما إلزاماً لك، اي أنك مهتم بشكل غير طبيعي للوصول الى هدفك مهما كانت التكلفة، فأنك في نفس الوقت - في مكان ما في أعماقك - لن تكون مؤمناً بأنك قادر على انجاز هذا الشيء.   
 
 
-في الأغلب، كل من حاول الأقلاع عن الاستنماء او حاول احتباس سائله المنوي، قد جربوا الفشل. 
+في الأغلب، كل من حاول الأقلاع عن الاستنماء او حاول الحفاظ على سائله المنوي قد ذاق الفــشــل. 
  
 
-اعتاد الناس اللذين يريدون التوقف على قول "إذا أصبحت خالية من الإباحية ، فسيكون ذلك رائعًا" ، "سيكون الأمر فظيعًا إذا لم أستطع أن أكون حراً" ؛ وما إلى ذلك. بمجرد أن تصبح معتمدًا على هدف رغبتك ، تنجذب إلى دوامة عنيفة حتى تنهك نفسك في المعاناه. لا يوجد سبب لخلق هذا الضغط غير الضروري.
+اعتاد الناس اللذين يريدون التوقف على قول "إذا أصبحتُ خالياً من الإباحية ، فسيكون ذلك امراً رائعًا!" ، "سيكون الأمر فظيعًا إذا لم أستطع أن أكون حراً..." ؛ وما إلى ذلك. بمجرد أن تصبح عبداً لرغبتك ، تنجذب إلى دوامة عنيفة حتى تنهك نفسك في المعاناه. لا يوجد سبب لخلق هذا الضغط غير الضروري.
+
+
+أفهم ان السقوط لا يعتبر فشلاً. الفشل هو عدم الوصول الى الهدف مطلقاً. والسبب في حدوث ذلك هو أن الإنسان يبحث دائمًا عن شيء ما ليفعله لأنه مشروط بمفهوم أنه إذا فعل شيئاً ما بشكل صحيح ، فسيؤدي به إلى النجاح.
+
+بدلاً من ذلك ، يجب على المرء أن يفهم ويحدد معتقداته الخاطئة وأنماطه السلبية لكي يبدأ بالتحرك فعلياً. يجب على المرء أن يتصالح مع الحقيقة ، لأن الحقيقة هي الشيء الوحيد الذي يمكن أن يؤدي إلى الحرية. لا يوجد دليل ، ولا خطوات مدرجة ، ولا يمكن لأي من هذه الأشياء أن تصنع تفهمات دائمة وعميقة وذات مغزى ذو اثر ايجابي على حياتك. فقط اكتشافك للحقيقة بنفسك هو القادر على خلق هذه التفهمات.
+
+ لكي تبحث عن الحقيقة ، يجب عليك أن تفهم ، باقتناع عميق ، الأشياء التي تمت برمجتك لإساءة فهمها. يجب أن يكون لديك ما يكفي من التواضع والإخلاص لتتمكن من استبدال الأفكار القديمة بأخرى جديدة ، مهما بدت هذه الأفكار الجديدة مؤلمة.
 
 
 
-فالتفهم ان السقوط لا يعتبر فشلاً. الفشل هو عدم الوصول الى الهدف مطلقاً. والسبب في حدوث ذلك هو أن الإنسان يبحث دائمًا عن شيء ما ليفعله لأنه مشروط بمفهوم أنه إذا فعل شيئاً ما بشكل صحيح ، فسيؤدي به إلى النجاح.
+**تأتي الحرية من فهم مصدر المشاكل ، وليس من المحاولة الواعية لإنهائها.**
 
-بدلاً من ذلك ، يجب على المرء أن يفهم ويتعامل مع معتقداته الخاطئة وأنماطه السلبية لكي يبدأ بالتحرك فعلياً. يجب على المرء أن يتصالح مع الحقيقة ، لأن الحقيقة هي الشيء الوحيد الذي يمكن أن يؤدي إلى الحرية. لا يوجد دليل ، ولا خطوات مدرجة ، ولا يمكن لأي من هذه الأشياء أن تصنع تفاهمات عميقة وذات مغزى وايجابية على حياتك. أنت فقط من تكتشف الحقيقة ، بنفسك ، وأنت فقط القادر على ذلك.
-
- لكي تبحث عن الحقيقة ، يجب عليك أن تفهم ، باقتناع عميق ، الأشياء التي تمت برمجتك لإساءة فهمها. يجب أن يكون لديك ما يكفي من التواضع والإخلاص لتتمكن من استبدال الأفكار القديمة بأخرى جديدة ، مهما بدت هذه الأفكار مؤلمة.
+أولئك الذين يفشلون باستمرار قد يقرؤون نفس الكتاب أو الإستراتيجية بشكل متكرر دون تغيير أي شيء. اقتباسي المفضل الذي يلخص هذا جيدًا هو من احد الشخصيات في لعبة Far Cry 3. حيث قال: "تعريف الجنون هو القيام بنفس الشيء مرارًا وتكرارًا مع توقع نتيجة مختلفة". القيام بنفس الشيء عدة مرات بنفس النتيجة لا فائدة منه. إذا كنت تكرر شيئًا في كثير من الأحيان دون جدوى ، فأنت تسيء فهمه ، أو أن المادة التي تقرأ منها لا تحتوي على الحقيقة. لا تنسى ذلك.
 
 
 
-**تأتي الحرية من فهم من أين تأتي الأشياء ، وليس من المحاولة الواعية لإنهائها.**
-
-أولئك الذين يفشلون باستمرار قد يقرؤون نفس الكتاب أو الإستراتيجية بشكل متكرر دون تغيير أي شيء. اقتباسي المفضل الذي يلخص هذا جيدًا هو من احد الشخصيات في لعبة Far Cry 3. حيث قال: "تعريف الجنون هو القيام بنفس الشيء مرارًا وتكرارًا وتوقع نتيجة مختلفة". القيام بنفس الشيء عدة مرات بنفس النتيجة لا فائدة منه. إذا كنت تكرر شيئًا في كثير من الأحيان دون جدوى ، فأنت تسيء فهمه ، أو أن المادة التي تقرأ منها لا تحتوي على الحقيقة. لا تنسى ذلك.
+لماذا تعتبر الأباحية الأكثر إزعاجًا؟ - هذا لأنها محرجة في الحديث عنها. نظرًا للطبيعة البشرية والعار ، غالبًا ما يتم الاحتفاظ بها ، وتزداد سوءًا على مر السنين ، مما يؤدي إلى محاصرة المستخدم إلى الأبد. من الصعب الكلام مع الأصدقاء والعائلة بشأن ذلك لأنه قد يبدو غريبًا ومحرجًا بشكل لا يصدق. هذا هو الجزء الذي من المرجح أن يكون الأسوأ. يمكن لأولئك الذين لديهم إدمان على التدخين والطعام والمخدرات وغيرها من الملذات الفورية الكلام مع الآخرين والعثور بسهولة نسبية على محترفين لإصلاح مشاكلهم. يمكن للمجتمع أن ينتقد الأشخاص الذين ينتجون ما يسبب الإدمان ، ومن ثم يمكن إحراز تقدم جماعي. ولكن نظرًا للطبيعة المحرجة للحديث عن الإباحية ، فمن المحتمل ألا يحدث مثل هذا الشعور الجماعي أبدًا.
 
 
-
-لماذا تعتبر الأباحية الأكثر إزعاجًا؟ - هذا لأنهه محرجة في الحديث عنها. نظرًا للطبيعة البشرية والعار ، غالبًا ما يتم الاحتفاظ بها ، وتزداد سوءًا على مر السنين ، مما يؤدي إلى محاصرة المستخدم إلى الأبد. من الصعب الكلام مع الأصدقاء والعائلة بشأن ذلك لأنه قد يبدو غريبًا ومحرجًا بشكل لا يصدق. هذا هو الجزء الذي من المرجح أن يكون الأسوأ. يمكن لأولئك الذين لديهم إدمان على التدخين والطعام والمخدرات وغيرها من الملذات الفورية الكلام مع الآخرين والعثور بسهولة نسبية على محترفين لإصلاح مشاكلهم. يمكن للمجتمع أن ينتقد الأشخاص الذين ينتجون ما يسبب الإدمان ، ومن ثم يمكن إحراز تقدم جماعي. ولكن نظرًا للطبيعة المحرجة للحديث عن الإباحية ، فمن المحتمل ألا يحدث مثل هذا الشعور الجماعي أبدًا.
-
-
-- **تعريف PMO**: *إباحية ، استمناء ، هزة الجماع*
-- **تعريف MO**: *العادة السرية ، النشوة الجنسية*
+- **تعريف PMO**: *إباحية ، استمناء ، النشوة الجنسية*
+- **تعريف MO**: *استنماء ، النشوة الجنسية*
 - **تعريف الوخزة**: *تذكير بمشاهدة الأباحية - تذكير صغير أو إشعار بأن الإباحية "متوفرة" ، وهو ما يحدث بسبب نمط حياتك السابق*
 - **تعريف فرط الجنس**: *الانغماس المفرط في النشاط الجنسي والمعتقدات الجنسية غير الصحية*
 
 
 ## القراءة 
 
-الإلهام قابل للتلف -قم به على الفور. إذا كنت  ملهماً لقراءة هذا الكتاب ، فاعتبر نفسك محظوظًا. لم يعثر الكثيرون على هذا وسوف يفوتون الحقائق المتاحة لهم. إذا كنت ترغب في تأجيل قراءة هذا الكتاب حتى وقت لاحق ، فاقرأه الآن على أي حال. لا يوجد "لاحقًا". معظم معاناتنا تأتي من التجنب.
+الإلهام قابل للتلف -قم به على الفور. إذا كنت مُلهماً لقراءة هذا الكتاب ، فاعتبر نفسك محظوظًا. لم يعثر الكثيرون على هذا وسوف يفوتون الحقائق المتاحة لهم. إذا كنت ترغب في تأجيل قراءة هذا الكتاب حتى وقت لاحق ، فاقرأه الآن على أي حال. لا يوجد "لاحقًا". معظم معاناتنا تأتي من التجنب.
 
-إذا كنت تريد حقًا أن تصبح أفضل نسخة من نفسك وأن تصبح أكثر قدرة ، فيجب أن تهتم في الانتهاء من هذه المحتوى.الشخص الوحيد الذي يمكنه القيام بذلك هو أنت. أنت فقط يمكنك شفاء نفسك.
+إذا كنت تريد حقًا أن تصبح أفضل نسخة من نفسك وأن تصبح أكثر قدرة ، فيجب أن تهتم في الانتهاء من هذا المحتوى. الشخص الوحيد الذي يمكنه القيام بذلك هو أنت. أنت فقط يمكنك شفاء نفسك.
 
-ولكن ، يتوجب عليك فعل شيئ واحد قبل انت تبدأ، يجب أن تترك الغرور بذاتك أثناء القراءة. إذا لم تكن متواضعاً أثناء القراءة ، فلن تتمكن من استيعاب أي أفكار أو مفاهيم جديدة. إذا كنت تعتقد أنك "تعرف كل هذا بالفعل" ، فقد كنت ستكون حراً بالفعل. ضع ذلك في الاعتبار - لا يمكنك تغيير نفسك دون تواضع.
+ولكن ، يتوجب عليك فعل شيئ واحد قبل انت تبدأ، يجب أن تترك الغرور بذاتك أثناء القراءة. إذا لم تكن متواضعاً أثناء القراءة ، فلن تتمكن من استيعاب أي أفكار أو مفاهيم جديدة. إذا كنت تعتقد أنك "تعرف كل هذا بالفعل" ، لكنت حراً بالفعل. ضع ذلك في الاعتبار - لا يمكنك تغيير نفسك دون تواضع.
 
-أحد الأشياء التي يتحدث عنها كريشنامورتي (الفيلسوف) هي حالة ثورة داخلية. يجب أن تكون دائمًا جاهزًا داخليًا للتغيير الكامل. كلما قلنا ، *سنحاول* أن نفعل شيئًا أو *سنحاول* أن نشكل عادة ، فإننا ننتظر و نتراجع.
+أحد الأشياء التي يتحدث عنها كريشنامورتي (الفيلسوف) هي حالة ثورة داخلية. يجب أن تكون دائمًا جاهزًا داخليًا للتغيير الكامل. كلما قلنا ، *سنحاول* أن نفعل شيئًا أو *سنحاول* أن نشكل عادة ، فإننا ننتظر ونتراجع.
 
 
 
 **ملاحظة: لا تتخطى الفصول. كل فصل مهم.**
 
-أود أيضًا أن تتعامل مع هذا الكتاب بهدف اكتساب رؤية وتفهم جداد ، بدلاً من محاولة أن *تؤمن بعدم وجود جميع مشاكلك*. تشير الأدلة إلى أنه يجب عليك حقًا أن تفهم حقيقة العادات/الإدمان لتغيير اتخاذ القرار ، والاعتقاد الأعمى أنك توقفت لا يساعد ذلك.
+أود أيضًا أن تتعامل مع هذا الكتاب بهدف اكتساب رؤية وتفهم جداد ، بدلاً من محاولة أن تتخلص من مشاكلك عن طريق الأيمان الفارغ. تشير الأدلة إلى أنه يجب عليك حقًا أن تفهم حقيقة العادات/الإدمان لتغيير قدرتك على اتخاذ القرارات ، والأيمان الأعمى أنك توقفت لا يساعد ذلك.
 
-هذا الكتاب أيضًا ليس نسخة من EasyPeasy أو اصدار لأي كتاب آخر ظهر من قبل. إنه ليس دليلًا ، أو إرشاداً ، أو طريقة. إنه مجرد كتاب يحتوي على نص يمكن للمرء استخدامه للتفكير في الأشياء. لا أريدك اتباع تعليماتي حول كيفية عيش حياة جيدة. يجب على المرء أن يجد الأشياء بنفسه.
+هذا الكتاب أيضًا ليس نسخة من EasyPeasy أو اصدار لأي كتاب آخر ظهر من قبل. إنه ليس دليلًا ، أو إرشاداً ، أو طريقة. إنه مجرد كتاب يحتوي على نص يمكن للمرء استخدامه للتفكير في الأشياء. لا أريدك أن تتبع تعليماتي حول كيفية عيش حياة جيدة. يجب على المرء أن يجد الأشياء بنفسه.
 
-قد أستخدم كلمة جيد/سيئ في هذا الكتاب ، لكن عندما أستخدم تلك المصطلحات ، أقصد حقًا "تؤدي إلى الحرية"/"تؤدي إلى الوهم". لقد طبقنا الملصقات "جيد" و "سيئ" على كل شيء بشكل أساسي ، لكنني أريدك أن تتراجع تهضم الأشياء على ما هي عليه حقًا - دون أن تعميك مفاهيمك المسبقة.
+قد أستخدم كلمة جيد/سيئ في هذا الكتاب ، لكن عندما أستخدم تلك المصطلحات ، أقصد حقًا "تؤدي إلى الحرية"/"تؤدي إلى الوهم". لقد طبقنا الملصقات "جيد" و "سيئ" على كل شيء بشكل أساسي ، لكنني أريدك أن تتراجع وتهضم الأشياء على ما هي عليه حقًا - دون أن تعميك مفاهيمك السابقة.
 
 أستمتع بالقراءة!
 
