update stray cat

--- a/src/markdown/arabic/2. Stray Cat.md
+++ b/src/markdown/arabic/2. Stray Cat.md
@@ -1,38 +1,37 @@
-عندما يمرض الجميع ، نتوقف عن اعتباره مرضاً. عندما يصبح المرض والتقييد الذاتي طبيعياً لدرجة أن غيابهما يُصنف على أنه غير طبيعي ، فأنه متواجد بعمق في المجتمع.
+عندما يمرض الجميع ، نتوقف عن اعتباره مرضاً. عندما يصبح المرض والتقييد الذاتي طبيعياً لدرجة أن غيابهما يُصنف على أنه غير طبيعي ، فأنه مُترسخ في المجتمع.
 
-ربما تكون قد سمعت عن "nofap" من قبل ، ولكن إذا لم تكن قد سمعت عنه ، فإن معظم الناس يسمعون عنها بطريقة مماثلة. من خلال مقطع فيديو على YouTube كاقتراح أو رابط أرسله لنا أحد الأصدقاء أو حتى صورة دعابية. إذا أرسل لك احداً رابط لهذا الكتاب ، فلا بد أنك مفتون لمعرفة ما يكمن بداخله. ومع ذلك ، بالنسبة لأولئك منكم الذين سمعوا بالفعل عن "nofap" ، فمن المحتمل أن تعرف الحقيقة المحزنة عن "مجتمع" المستخدمين اليائسين في نفس الدورة المتكررة.
+ربما تكون قد سمعت عن "nofap" من قبل ، ولكن إذا لم تسمع عنه ، فإن معظم الناس يسمعون عنه بطريقة مماثلة. من خلال مقطع فيديو على YouTube كاقتراح أو رابط أرسله لنا أحد الأصدقاء أو حتى صورة دعابية. إذا أرسل لك احداً رابط لهذا الكتاب ، فلا بد أنك مفتون لمعرفة ما يكمن بداخله. ومع ذلك ، بالنسبة لأولئك منكم الذين سمعوا بالفعل عن "nofap" ، فمن المحتمل أن تعرف الحقيقة المحزنة عن "مجتمع" المستخدمين اليائسين في نفس الدورة المتكررة.
 
-ينضم معظم الناس إلى موجة الإباحية ، كما يستخدمها معظم الناس ، لذلك "لا بد أن يكون الأمر على ما يرام" ، مستنكرين أي دليل يثبت أنهم مخطئون لأنهم يفضلون أن يكونوا هناء في الجهل بدلاً من العيش في الحقيقة. ومع ذلك ، لا شيء يمكن أن يفلت من حقيقة أن PMO له العديد من التأثيرات الضارة على المشاهد "العادي" والمشاهد "الثقيل" على حد سواء.
+ينضم معظم الناس إلى موجة الإباحية ، كما يستخدمها معظم الناس ، لذلك "لا بد أن يكون الأمر على ما يرام" ، مستنكرين أي دليل يثبت أنهم مخطئون لأنهم يفضلون أن يعشوا في هناء الجهل بدلاً من أن يعيشوا في الحقيقة. ومع ذلك ، لا شيء يمكن أن يفلت من حقيقة أن PMO له العديد من التأثيرات الضارة على المشاهد "العادي" والمشاهد "الثقيل" على حد سواء.
+
+على مر العقود ، ازداد فرط الجنس ، وقام الناس بدفع حدود ما يظنون أنه مقبول. يتم الرد على الأسئلة المتعلقة بالنقاء بمجرد وهم ، ونتيجة لذلك ، يتم التخلص من النقاء أكثر من أي وقت مضى. تضيف الإباحية الوقود إلى النار في هذا الأمر. في عصر المعلومات هذا ، يمكن الوصول إلى كل شيء على الفور مجانًا. هذا يجعل القرارات المتهورة أسهل لأن هناك مقاومة قليلة للحصول على ما تريد.
+
+لقد ارتفع هذا النوع من الجنس مع استخدام الإباحية والاستمناء ، وكلاهما يضر بإنتاجك وأدائك. تعد المواد الإباحية وفرط التفكير الجنسي من أكبر مشاكل العالم الحديث ، ولكن في نفس الوقت يتم التغاضي عنها.
+
+إذا كنت تريد معرفة بعض الإحصائيات ، فإن متوسط العمر الذي يشاهد به معظم الأشخاص الإباحية لأول مرة هو 11 عامًا. 22% من الشباب الذين يشاهدون الإباحية تكون اعمارهم تحت العشر سنوات. تخيل ابنك أو ابنتك البالغة من العمر 10 أعوام وهي تشاهد صفحةً لموقع إباحي خلف أبوابٍ مغلقة. يكاد يكون التفكير فيه ممرضاً.
 
 
-على مر العقود ، ازداد فرط الجنس ، ودفع الناس حدود ما يعتقدون أنه مقبول. يتم الرد على الأسئلة المتعلقة بالنقاء بمجرد وهم ، ونتيجة لذلك ، يتم التخلص من النقاء أكثر من أي وقت مضى. تضيف الإباحية الوقود إلى النار في هذا الأمر. في عصر المعلومات هذا ، يمكن الوصول إلى كل شيء على الفور مجانًا. هذا يجعل القرارات المتهورة أسهل لأن هناك مقاومة قليلة للحصول على ما تريد.
+هذا هو الكفاح الحديث: أفراد وحيدون يستدعون قوة إرادة ماهولة ، ويقومون بالصيام ، والتأمل ، والتمرن ... ضد جيوش من العلماء والإحصائيين الذين يقومون بتسليح الشاشات ، والوجبات السريعة ، والأخبار ، والإباحية اللانهائية ، والألعاب التي لا نهاية لها ، والمخدرات. لكن ما هي الآثار السلبية؟
 
-لقد ارتفع هذا النوع من الجنس مع استخدام الإباحية والاستمناء ، وكلاهما يضر بإنتاجيتك وأدائك. تعد المواد الإباحية وفرط التفكير الجنسي من أكبر مشاكل العالم الحديث ، ولكن في نفس الوقت يتم التغاضي عنها.
-
-إذا كنت تريد معرفة بعض الإحصائيات ، فإن متوسط العمر الذي يشاهد به معظم الأشخاص الإباحية لأول مرة هو 11 عامًا. 22% من الشباب الذين يشاهدون الإباحية تكون اعمارهم تحت العشر سنوات. تخيل ابنك أو ابنتك البالغة من العمر 10 أعوام وهي تشاهد صفحةً لموقع إباحي خلف أبواب مغلقة. يكاد يكون التفكير فيه ممرضاً.
-
-
-هذا هو الكفاح الحديث: أفراد وحيدون يستدعون قوة إرادة غير طبيعية ، والصيام ، والتأمل ، والتمرن ... ضد جيوش من العلماء والإحصائيين الذين يقومون بتسليح الطعام الوفير ، والشاشات ، والوجبات السريعة ، والأخبار ، والإباحية اللانهائية ، والألعاب التي لا نهاية لها ، والمخدرات. لكن ما هي الآثار السلبية؟
-
-للاباحية تأثيرات سلبية بشكل رئيسي على نظام الدوبامين.كما يقلل الاستمناء فقط بشكل مهول أكثر من 30 نوعًا من الفيتامينات / المغذيات، والطاقة الجسدية وقوة الحياة (ما يمكن أن نطلق عليه "الهالة"). عندما يتم الجمع بين الإباحية والاستمناء ، تتضاعف هذه التأثيرات. هذا مهم ، لأنه للحصول على راحة البال ، يجب أن تنعم براحة الجسد أولاً.
+للاباحية تأثيرات سلبية بشكل رئيسي على نظام الدوبامين.كما يقلل الاستمناء فقط بشكل مهول أكثر من 30 نوعًا من الفيتامينات، والمغذيات، والطاقة الجسدية وقوة حياتك. عندما يتم الجمع بين الإباحية والاستمناء ، تتضاعف هذه التأثيرات. هذا مهم ، لأنه للحصول على راحة البال ، يجب أن تنعم براحة الجسد أولاً.
 
 
 تمتد الآثار السلبية من انخفاض الطاقة ، وانخفاض الشغف ، وانخفاض القدرة على القيام بالعمل ، وانخفاض الاحترام للمرأة ، والاكتئاب ، والقلق عند التفاعل مع الآخرين ، وعدم القدرة على الانتصاب بسبب الإباحية ، ومشاكل العلاقات ، وحب الشباب (مشاكل البشرة) ، والهوس بالإباحية والتخيلات ، والتشكيك في الميول الجنسية على الرغم من عدم الاهتمام مسبقاً ، وأكثر من ذلك. القاعدة العامة هي أن السلبيات الجسدية تتعلق بالاستمناء المتكرر ، والسلبيات العقلية تتعلق بالإباحية.
 
 **يعتقد الناس أن التوقف يوفر بعض الفوائد ، لكن في الحقيقة هذا بسبب عدم تواجد سلبيات الإباحية.**
 
-هذه الآثار السلبية ليست قصصية ولا تحدث لمجموعة قليلة. بدلاً من ذلك ، يعاني جميع الأشخاص الذين يستخدمون PMO من درجة معينة من هذه الأعراض ، بغض النظر عما إذا كانوا يدركون ذلك أو لا. مثل تشبيه "الضفدع المغلي" ، إذا حدث التغيير ببطء ولا نعرفه ، فمن غير المرجح أن نلاحظه. يمكن أن تكون العديد من المشاكل في حياتنا الشخصية مرتبطة بشكل مباشر أو غير مباشر بـ PMO ، ولكن قد لا نكون بعلم بهذا. ومع ذلك ، لا توجد فائدة كبيرة في إثبات هذه الآثار السلبية (مرة أخرى) ، لأن **التأثيرات الكيميائية العصبية للإباحية مفهومة جيدًا علميًا**. فقط اسأل أي مستخدم سابق حرر نفسه تمامًا من الإباحية والاستمناء. إن لم يعتقدوا أنهم سيكتسبون قوى خارقة عند توقفهم ، سيشرحون التغييرات الإيجابية التي مروا بها بعد المغادرة.
+هذه الآثار السلبية ليست قصصية ولا تحدث لمجموعة قليلة. بدلاً من ذلك ، يعاني جميع الأشخاص الذين يستخدمون PMO من درجة معينة من هذه الأعراض ، بغض النظر عما إذا كانوا يدركون ذلك أو لا. مثل تشبيه "الضفدع المغلي" ، إذا حدث التغيير ببطء ولا نعرفه ، فمن غير المرجح أن نلاحظه. يمكن أن تكون العديد من المشاكل في حياتنا الشخصية مرتبطة بشكل مباشر أو غير مباشر بـ PMO ، ولكن قد لا نكون على علم بهذا. ومع ذلك ، لا توجد فائدة كبيرة في إثبات هذه الآثار السلبية (مرة أخرى) ، لأن **التأثيرات الكيميائية العصبية للإباحية مفهومة جيدًا علميًا**. فقط اسأل أي مستخدم سابق حرر نفسه تمامًا من الإباحية والاستمناء. سيشرح لك التغييرات الإيجابية التي مر بها بعد المغادرة.
 
-لذا ، دعنا نعود إلى فكرة أننا ربما اكتشفنا nofap من خلال مقطع فيديو على YouTube. قام المئات من مستخدمي YouTube بإنشاء مقاطع فيديو حول الإقلاع عن الإباحية والاستمناء ، مع آلاف مقاطع الفيديو التي تنصح بالإقلاع عن التدخين. ومع ذلك ، هناك حقيقة محزنة - معظم النصائح التي يقدمها مستخدمو YouTube / الموجهون الذين يعملون على "تطوير النفس" لها معدل نجاح ضئيل جداً.
+لذا ، دعنا نعود إلى فكرة أننا ربما اكتشفنا nofap من خلال مقطع فيديو على YouTube. قام المئات من مستخدمي YouTube بإنشاء مقاطع فيديو حول الإقلاع عن الإباحية والاستمناء ، مع آلاف مقاطع الفيديو التي تنصح بالإقلاع عن التدخين. ومع ذلك ، هناك حقيقة محزنة - معظم النصائح التي يقدمها صانعي المحتوى على الـ YouTube الذين يعملون على "تطوير النفس" لها معدل نجاح ضئيل جداً.
 
-هذا لأن الناس يقتربون من مغادرة  الإباحية مع الحاجة إلى التحفيز. يمكن كسر بعض الأشياء بالحافز ، لكن لا يمكن كسر العادات / الإدمان. يستخدم العديد من "المشاهير" أيضًا الشغف كسبب أساسي للتوقف. **الشغف مؤقت**.
+هذا لأن الناس يحاولون مغادرة الإباحية وهم محتاجون إلى تحفيز. يمكن كسر بعض الأشياء بالتحفز ، لكن لا يمكن كسر العادات / الإدمان. يستخدم العديد من "المشاهير" أيضًا الشغف كسبب أساسي للتوقف. **الشغف مؤقت**.
 
-بالنسبة لي ، يجب أن يكون العقل خادمًا وأداة, وليس سيدًا. لا ينبغي لعقل القرد أن يتحكم بك ويقودك بشكل يومي و دائم. أنا شخصياً لن أكون أنجح شخص على هذا الكوكب ، ولا أريد أن أكون كذلك. أريد فقط أن أكون أنجح نسخة من نفسي بينما أعمل بأقل جهد ممكن. ومع وجود مستهلكات الطاقة مثل الإباحية والاستمناء في الحياة ، ستعيق هذه الأنواع من الطموح ورحلتك إلى النمو.
+بالنسبة لي ، يجب أن يكون العقل خادمًا وأداة، وليس سيدًا. لا ينبغي لعقلك البدائي أن يتحكم بك ويقودك بشكل يومي ودائم. أنا شخصياً لن أكون أنجح شخص على هذا الكوكب ، ولا أريد أن أكون كذلك. أريد فقط أن أكون أنجح نسخة من نفسي بينما أعمل بأقل جهد ممكن. ومع وجود مستهلكات الطاقة مثل الإباحية والاستمناء في الحياة ، ستعيق هذه المستهلكات طموحك ورحلتك للنمو.
 
 
 ## الحوافز الكاذبة
 
-احذر من أن تبني تفكيرك في الإقلاع على أي حوافز كاذبة. قد يرغب البعض منا في الإقلاع لإرضاء أصدقائنا ، أو جعل ازواجنا أكثر سعادة ، أو أن نكون أفضل من الأشخاص الذين نعتبرهم "منحطين" أو لكي نصبح أكثر انضباطًا. على الرغم من أن هذه طرق رائعة لاكتشاف احتباس السائل المنوي أو التوقف عن الإباحية ، إلا أن هذه الحوافز تخلق العذر المثالي لنا للوقوع عندما نمر بمشاعر سلبية.
+احذر من أن تبني تفكيرك في الإقلاع على أي حوافز كاذبة. قد يرغب البعض منا في الإقلاع لإرضاء أصدقائنا ، أو جعل ازواجنا أكثر سعادة ، أو أن نكون أفضل من الأشخاص الذين نعتبرهم "منحطين" أو لكي نصبح أكثر انضباطًا. على الرغم من أن هذه طرق رائعة لاكتشاف الحفاظ على السائل المنوي أو التوقف عن الإباحية ، إلا أن هذه الحوافز تخلق العذر المثالي لنا للوقوع عندما نمر بمشاعر سلبية.
 
 - "أنا لا أهتم بما يعتقده صديقي ؛ ليست بمشكلةٍ كبيرة على أي حال."
 - "إن زوجتي سعيدة بالفعل. إن الإباحية في الحقيقة ليست بهذا السوء."
@@ -47,4 +46,3 @@
 الجميع عالقون في المعاناة والصراع ، لكن معظم الناس لا يدركون ذلك الصراع ؛ إنهم يبحثون فقط عن بدائل وحلول وأماكن هروب. في حين أنه إذا توقفوا عن البحث عن الهروب وبدأوا في التساؤل عن البيئة التي تسبب هذا الصراع ، فإن العقل يصبح حادًا وحيًا وذكيًا.
 
 لذلك ، لا تتوقف من أجل أي شخص آخر. توقف من أجل نفسك.
-
